# project-infnet-project-infnet-ia-generativa-para-linguagem-large-language-model-25e2_3

./: .env.example  .gitignore  README.md  main.py  part-01.ipynb  part-03.ipynb  part-04.ipynb  part-05.ipynb  part-1.ipynb  pyproject.toml  question-1.ipynb  question-3.ipynb  question-4.ipynb
docs/: rubricas.md
part-05/: README.md  app.py  json_parser.py  lyrics_searcher.py  wedding_organizer_agent.py
