[project]
name = "project-infnet-ia-generativa-para-linguagem-large-language-model-25e2-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers[torch]>=4.51.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
]
