[project]
name = "project-infnet-ia-generativa-para-linguagem-large-language-model-25e2-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "lyricsgenius>=3.6.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers[torch]>=4.51.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
]
